force-app/main/default/objects/Student1_Class_enrollment__c/Student1_Class_enrollment__c.object-meta.xml
<CustomObject>
    <label>Class Student</label>
    <nameField>
        <label>Student1-Class enrollment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Class Students</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>