force-app/main/default/objects/Student1_Class_enrollment__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <label>Class</label>
    <referenceTo>Class__c</referenceTo>
    <relationshipName>Student1_Class_enrollments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>