force-app/main/default/objects/Student1_Class_enrollment__c/fields/Donation_balance__c.field-meta.xml
<CustomField>
    <fullName>Donation_balance__c</fullName>
    <label>Donation balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>