force-app/main/default/objects/Student1_Class_enrollment__c/fields/Donation_to_be_paid__c.field-meta.xml
<CustomField>
    <fullName>Donation_to_be_paid__c</fullName>
    <label>Donation to be paid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>