force-app/main/default/objects/Student1_Class_enrollment__c/fields/Fees_Ballance__c.field-meta.xml
<CustomField>
    <fullName>Fees_Ballance__c</fullName>
    <label>Fees Ballance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>