force-app/main/default/objects/Student1_Class_enrollment__c/fields/Is_new_student__c.field-meta.xml
<CustomField>
    <fullName>Is_new_student__c</fullName>
    <label>Is new student</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>