force-app/main/default/objects/Student1_Class_enrollment__c/fields/Student1__c.field-meta.xml
<CustomField>
    <fullName>Student1__c</fullName>
    <label>Student1</label>
    <referenceTo>StudentList__c</referenceTo>
    <relationshipName>Student1_Class_enrollments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>